# dashboard-apps

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
dashboard_apps/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
dashboard_apps/management/commands/: test_auth_app.py  test_auth_install.py
