[tool.poetry]
name = "dashboard_apps"
version = "0.1.0"
description = "github apps for https://github.com/gepetto/dashboard"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://dashboard-apps.saurel.me"
repository = "https://github.com/nim65s/dashboard-apps"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3"
ndh = "^3.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
