[tool.poetry]
name = "dashboard_apps"
version = "0.1.0"
description = "github apps for https://github.com/gepetto/dashboard"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"
readme = "README.md"
homepage = "https://dashboard-apps.saurel.me"
repository = "https://github.com/nim65s/dashboard-apps"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3"
ndh = "^3.9.4"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
ipython = "^7.11.1"
isort = "^4.3.21"
flake8 = "^3.7.9"
yapf = "^0.29.0"
toml = "^0.10.0"
pre-commit = "^1.21.0"
pydocstyle = "^5.0.1"
mypy = "^0.761"
django-stubs = "^1.4.0"

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
